{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 23,
  "lineage": "59c247fa-8e49-e443-d77b-e30701e9ed6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d48bc7ec145b1112",
            "domain": "vpc",
            "id": "eipalloc-0b00e50afa3047e08",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ae367b38020091ad",
            "private_dns": "ip-10-0-1-161.us-west-2.compute.internal",
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-35-83-88-152.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.88.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "testauthor",
              "Name": "eip-nat_management"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "eip-nat_management"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca2dad891302697",
            "arn": "arn:aws:ec2:us-west-2:173558731159:instance/i-00f31d41cc2ff8115",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f31d41cc2ff8115",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2e868a13b316751",
            "private_dns": "ip-10-0-1-88.us-west-2.compute.internal",
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-54-244-104-58.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.104.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ebb9458ae8a21ac7",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75887bdc4315cd5",
            "tags": {
              "Author": "testauthor",
              "Name": "bastion"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054fad84f534bb0ef"
            ]
          },
          "dependencies": [
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_subnet.public_subnets",
            "data.aws_ami.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:internet-gateway/igw-08a928e4d0eeca421",
            "id": "igw-08a928e4d0eeca421",
            "owner_id": "173558731159",
            "tags": {
              "Author": "testauthor",
              "Name": "igw_management"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "igw_management"
            },
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b00e50afa3047e08",
            "connectivity_type": "public",
            "id": "nat-0bac0f795ea8dfdc1",
            "network_interface_id": "eni-0ae367b38020091ad",
            "private_ip": "10.0.1.161",
            "public_ip": "35.83.88.152",
            "subnet_id": "subnet-0b75887bdc4315cd5",
            "tags": {
              "Author": "testauthor",
              "Name": "nat_management"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "nat_management"
            }
          },
          "dependencies": [
            "aws_vpc.management",
            "aws_eip.nat",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:route-table/rtb-08f814cd782969286",
            "id": "rtb-08f814cd782969286",
            "owner_id": "173558731159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bac0f795ea8dfdc1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "testauthor",
              "Name": "private_rt_management"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "private_rt_management"
            },
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:route-table/rtb-0215cdca63d62ef8e",
            "id": "rtb-0215cdca63d62ef8e",
            "owner_id": "173558731159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a928e4d0eeca421",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "testauthor",
              "Name": "public_rt_management"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "public_rt_management"
            },
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e3f99eee730079f",
            "route_table_id": "rtb-08f814cd782969286",
            "subnet_id": "subnet-0d0bcd6ba7903632a"
          },
          "dependencies": [
            "aws_vpc.management",
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9077aba29e1e2f6",
            "route_table_id": "rtb-08f814cd782969286",
            "subnet_id": "subnet-0a916a5b23c76cd5c"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "aws_eip.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8c27d398bc0c83b",
            "route_table_id": "rtb-0215cdca63d62ef8e",
            "subnet_id": "subnet-0b75887bdc4315cd5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff551d28a04ffc8",
            "route_table_id": "rtb-0215cdca63d62ef8e",
            "subnet_id": "subnet-0f06d478e9dc62916"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:security-group/sg-054fad84f534bb0ef",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054fad84f534bb0ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg_management",
            "name_prefix": "",
            "owner_id": "173558731159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "testauthor",
              "Name": "bastion_sg_management"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "bastion_sg_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:subnet/subnet-0d0bcd6ba7903632a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d0bcd6ba7903632a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173558731159",
            "tags": {
              "Author": "testauthor",
              "Name": "private_10.0.0.0_us-west-2a"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "private_10.0.0.0_us-west-2a"
            },
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:subnet/subnet-0a916a5b23c76cd5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a916a5b23c76cd5c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173558731159",
            "tags": {
              "Author": "testauthor",
              "Name": "private_10.0.2.0_us-west-2b"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "private_10.0.2.0_us-west-2b"
            },
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:subnet/subnet-0b75887bdc4315cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b75887bdc4315cd5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "173558731159",
            "tags": {
              "Author": "testauthor",
              "Name": "public_10.0.1.0_us-west-2a"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "public_10.0.1.0_us-west-2a"
            },
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:subnet/subnet-0f06d478e9dc62916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f06d478e9dc62916",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "173558731159",
            "tags": {
              "Author": "testauthor",
              "Name": "public_10.0.3.0_us-west-2b"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "public_10.0.3.0_us-west-2b"
            },
            "vpc_id": "vpc-0ada1aceec2cbc195"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:173558731159:vpc/vpc-0ada1aceec2cbc195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a231fa1de9333bc1",
            "default_route_table_id": "rtb-049f7d4b67f5c072b",
            "default_security_group_id": "sg-0583c64bafc68da3e",
            "dhcp_options_id": "dopt-80d0e2f8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ada1aceec2cbc195",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-049f7d4b67f5c072b",
            "owner_id": "173558731159",
            "tags": {
              "Author": "testauthor",
              "Name": "management"
            },
            "tags_all": {
              "Author": "testauthor",
              "Name": "management"
            }
          }
        }
      ]
    }
  ]
}